syntax = "proto3";

option java_multiple_files = true;
option java_package = "admission";

service AdmissionService {
  rpc CreateAdmissionAccount (AdmissionRequest) returns (AdmissionResponse);
}

message AdmissionRequest {
  string studentId = 1;
  string name = 2;
  string email = 3;
}

message AdmissionResponse {
  string accountId = 1;
  string status = 2;
}